--- a/css/leon.css
+++ b/css/leon.css
@@ -160,7 +160,6 @@ body {
     text-align: center;
     letter-spacing: -3px;
     margin: 0;
-    text-transform: capitalize;
 }
 
 .special-head + p {
@@ -175,7 +174,6 @@ body {
         font-size: 60px;
     }
     .special-head + p {
-        font-size: 12px;
         margin: -20px 0 0 ;
     }
 }
@@ -434,64 +432,45 @@ body {
 /* End of About */
 /* Start of Contact */
 .contact {
-    padding-left: 60px;
-    padding-right: 60px;
-    background-color: #f6f6f6;
-}
-
-.contact .contact-text {
-    text-align: center;
     padding-top: 60px;
     padding-bottom: 60px;
-}
-
-.contact .contact-text p {
-    margin: 10px auto;
-}
-
-.contact .contact-text p:first-of-type {
+    background-color: #f6f6f6;
+  }
+  .contact .info {
+    padding-top: 60px;
+    padding-bottom: 60px;
+    text-align: center;
+  }
+  .contact .info .label {
     font-size: 35px;
     font-weight: 800;
-    letter-spacing: -2px;
     color: var(--secondary-color);
-}
-
-@media (max-width: 991px) {
-    .contact .contact-text p:first-of-type {
-        font-size: 25px;
-    }
-}
-
-.contact .contact-text p:nth-of-type(2) {
+    letter-spacing: -2px;
+    margin-bottom: 15px;
+  }
+  .contact .info .link {
     display: block;
     font-size: 35px;
     font-weight: 800;
-    letter-spacing: -1px;
     color: var(--main-color);
-}
-
-@media (max-width: 991px) {
-    .contact .contact-text p:nth-of-type(2) {
-        font-size: 25px;
-    }
-}
-
-.contact .contact-text .social {
+    text-decoration: none;
+  }
+  .contact .info .social {
     display: flex;
     justify-content: center;
     margin-top: 20px;
     font-size: 16px;
-}
-
-.contact .contact-text .social p {
-    color: #2c4755;
-    font-size: 16px;
-}
-
-.contact .contact-text .social i {
-    color: #2c4755;
+  }
+  .contact .info .social i {
     margin-left: 10px;
-}
+    color: var(--secondary-color);
+  }
+  @media (max-width: 767px) {
+    .contact .info .label,
+    .contact .info .link {
+      font-size: 25px;
+    }
+  }
 /* End of Contact */
 /* Start of Footer */
 .footer {
